# OpenGLObjectRenderer

./: CMakeLists.txt  GLErrorCheck.cpp  GLErrorCheck.h  GeometricDefinitions.h  Object3D.cpp  Object3D.h  Shader.h  main.cpp  readme.md
glad/: glad.h
include/glad/: glad.c
include/rply/: rply.c  rply.h  rplyfile.h
input/: chair.ply
res/: Basic.shader
res/shaders/: Basic.shader
src/: Application.cpp  GLErrorCheck.cpp  GLErrorCheck.h  GeometricDefinitions.h  Object3D.cpp  Object3D.h  PlyFileParser.cpp  PlyFileParser.h  Shader.h
